# rent-search

./: .gitignore
backend/: README.md  alembic.ini  mock_property_data.json  pyproject.toml
backend/app/: config.py  db.py  main.py  scraper.py
backend/migrations/: create_migration_script.py  create_migration_template.py
backend/migrations/versions/: 64471fc4b5af_initial.py  template_20250510235908.py
backend/scripts/: README.md  scrape_daily.py  test_scraper.py
docker/: docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/PriceTrend/: PriceTrend.tsx  index.ts
