[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
psycopg = {extras = ["binary"], version = "^3.2.7"}
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
fake-useragent = "^2.2.0"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.40"
cryptography = "^44.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
